# Napari_SlicePropagator

./: README.md  setup.cfg  setup.py
napari_slice_propagator/: __init__.py  _propagator.py  _widget.py  napari.yaml
napari_slice_propagator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
