[metadata]
name = napari-slice-propagator
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Semi-automated 3D segmentation tool with slice propagation and active contours
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    napari[all]
    numpy
    scikit-image
    scipy

[options.packages.find]
where = .

[options.entry_points]
napari.manifest =
    napari-slice-propagator = napari_slice_propagator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5
